add a devstat fix in devfs.conf defaults.
This is needed for libgtop

--- a/etc/devfs.conf
+++ b/etc/devfs.conf
@@ -63,3 +63,6 @@ perm	/dev/pass0	0666
 perm	/dev/xpt0	0666
 perm	/dev/agpart	0666
 perm	/dev/uscanner0	0666
+
+# Allow libgtop access for all users
+perm	/dev/devstat	0444
