--- a/libexec/mport.check-fake/Makefile
+++ b/libexec/mport.check-fake/Makefile
@@ -3,10 +3,10 @@ PROG= mport.check-fake
 MPORTDIR= ${SRCTOP}/contrib/mport
 .PATH: ${MPORTDIR}/libexec/mport.check-fake
 
-CFLAGS+=	-I${MPORTDIR}/libmport -fblocks
+CFLAGS+=	-I${MPORTDIR}/libmport 
 
 MK_MAN=	no
 
-LIBADD=	mport sqlite3 dispatch BlocksRuntime pthread
+LIBADD=	mport sqlite3  pthread
 
 .include <bsd.prog.mk>
