--- a/libexec/mport.check-for-older/Makefile
+++ b/libexec/mport.check-for-older/Makefile
@@ -3,12 +3,12 @@ PROG= mport.check-for-older
 MPORTDIR= ${SRCTOP}/contrib/mport
 .PATH: ${MPORTDIR}/libexec/mport.check-for-older
 
-CFLAGS+=       -I${MPORTDIR}/libmport -fblocks
+CFLAGS+=       -I${MPORTDIR}/libmport 
 
 WARNS?= 	4
 
 MK_MAN= no
 
-LIBADD= mport dispatch BlocksRuntime pthread
+LIBADD= mport  pthread
 
 .include <bsd.prog.mk>
