--- a/libexec/mport.create/Makefile
+++ b/libexec/mport.create/Makefile
@@ -3,12 +3,12 @@ PROG= mport.create
 MPORTDIR= ${SRCTOP}/contrib/mport
 .PATH: ${MPORTDIR}/libexec/mport.create
  
-CFLAGS+=       -I${MPORTDIR}/libmport -fblocks
+CFLAGS+=       -I${MPORTDIR}/libmport 
 
 WARNS?= 	6
 
 MK_MAN= no
 
-LIBADD= mport dispatch BlocksRuntime pthread
+LIBADD= mport  pthread
 
 .include <bsd.prog.mk>
