--- a/libexec/mport.init/Makefile
+++ b/libexec/mport.init/Makefile
@@ -3,11 +3,11 @@ PROG= mport.init
 MPORTDIR= ${SRCTOP}/contrib/mport
 .PATH: ${MPORTDIR}/libexec/mport.init
  
-CFLAGS+=       -I${MPORTDIR}/libmport -fblocks
+CFLAGS+=       -I${MPORTDIR}/libmport 
 
 MK_MAN=		no
 
-LIBADD+=	mport sqlite3 dispatch BlocksRuntime pthread
+LIBADD+=	mport sqlite3  pthread
 
 
 .include <bsd.prog.mk>
