--- a/libexec/mport.fetch/Makefile
+++ b/libexec/mport.fetch/Makefile
@@ -3,10 +3,10 @@ PROG= mport.fetch
 MPORTDIR= ${SRCTOP}/contrib/mport
 .PATH: ${MPORTDIR}/libexec/mport.fetch
  
-CFLAGS+=       -I${MPORTDIR}/libmport -fblocks
+CFLAGS+=       -I${MPORTDIR}/libmport 
 
 MK_MAN= no
 
-LIBADD= mport dispatch BlocksRuntime pthread
+LIBADD= mport  pthread
 
 .include <bsd.prog.mk>
