--- a/libexec/mport.query/Makefile
+++ b/libexec/mport.query/Makefile
@@ -5,10 +5,10 @@ PROG= mport.list
 MPORTDIR= ${SRCTOP}/contrib/mport
 .PATH: ${MPORTDIR}/libexec/${PROG}
 
-CFLAGS+=       -I${MPORTDIR}/libmport -fblocks
+CFLAGS+=       -I${MPORTDIR}/libmport 
 
 MK_MAN= no
 
-LIBADD= mport dispatch BlocksRuntime pthread sqlite3
+LIBADD= mport  pthread sqlite3
 
 .include <bsd.prog.mk>
