--- a/libexec/mport.version_cmp/Makefile
+++ b/libexec/mport.version_cmp/Makefile
@@ -5,10 +5,10 @@ PROG= mport.list
 MPORTDIR= ${SRCTOP}/contrib/mport
 .PATH: ${MPORTDIR}/libexec/${PROG}
 
-CFLAGS+=       -I${MPORTDIR}/libmport -fblocks
+CFLAGS+=       -I${MPORTDIR}/libmport 
 
 MK_MAN= no
 
-LIBADD= mport sqlite3 dispatch BlocksRuntime pthread
+LIBADD= mport sqlite3  pthread
 
 .include <bsd.prog.mk>
