--- a/lib/libmport/Makefile
+++ b/lib/libmport/Makefile
@@ -8,11 +8,12 @@ LIB=	mport
 SRCS=	asset.c bundle_write.c bundle_read.c plist.c create_primative.c db.c \
         util.c error.c \
         info.c install_primative.c instance.c \
-		version_cmp.c check_preconditions.c delete_primative.c \
-		default_cbs.c  merge_primative.c bundle_read_install_pkg.c \
-		update_primative.c bundle_read_update_pkg.c pkgmeta.c \
+	version_cmp.c check_preconditions.c delete_primative.c \
+	default_cbs.c  merge_primative.c bundle_read_install_pkg.c \
+	update_primative.c bundle_read_update_pkg.c pkgmeta.c \
     	fetch.c index.c index_depends.c install.c clean.c setting.c  \
-   		stats.c verify.c lock.c mkdir.c hashmap.c
+   	stats.c verify.c lock.c mkdir.c hashmap.c \
+	import_export.c upgrade.c update.c
 INCS=	mport.h
 
 CFLAGS+=	-I${.CURDIR} -I${MPORTDIR}/libmport -g
