--- a/share/doc/llvm/Makefile
+++ b/share/doc/llvm/Makefile
@@ -1,8 +1,6 @@
-# $FreeBSD: stable/11/share/doc/llvm/Makefile 284321 2015-06-12 14:30:27Z sjg $
-
 SUBDIR=		clang
 
-SRCDIR=		${.CURDIR}/../../../contrib/llvm
+SRCDIR=		${SRCTOP}/contrib/llvm-project/llvm
 
 .PATH: ${SRCDIR} ${SRCDIR}/lib/Support
 
