--- a/release/tools/gce.conf
+++ b/release/tools/gce.conf
@@ -6,9 +6,10 @@
 export VMSIZE=20G
 
 # Set to a list of packages to install.
-export VM_EXTRA_PACKAGES="firstboot-midnightbsd-update firstboot-pkgs \
-	google-cloud-sdk panicmail sudo sysutils/py-google-compute-engine \
-	lang/python lang/python2 lang/python3"
+export VM_EXTRA_PACKAGES="${VM_EXTRA_PACKAGES} firstboot-midnightbsd-update \
+	firstboot-pkgs \ google-cloud-sdk panicmail sudo \
+	sysutils/py-google-compute-engine lang/python lang/python2 \
+	lang/python3"
 
 # Set to a list of third-party software to enable in rc.conf(5).
 export VM_RC_LIST="ntpd sshd growfs \
