--- a/release/tools/vagrant.conf
+++ b/release/tools/vagrant.conf
@@ -1,13 +1,12 @@
 #!/bin/sh
-#
-#
 
 # The default of 3GB is too small for Vagrant, so override the size here.
 export VMSIZE=8G
 
 # Packages to install into the image we're creating.  This is a deliberately
 # minimalist set, providing only the packages necessary to bootstrap.
-export VM_EXTRA_PACKAGES="shells/bash firstboot-midnightbsd-update firstboot-pkgs"
+export VM_EXTRA_PACKAGES="${VM_EXTRA_PACKAGES} shells/bash \
+	firstboot-midnightbsd-update firstboot-pkgs"
 
 # Set to a list of third-party software to enable in rc.conf(5).
 export VM_RC_LIST="firstboot_midnightbsd_update firstboot_pkgs growfs"
