--- a/lib/csu/Makefile.inc
+++ b/lib/csu/Makefile.inc
@@ -1,9 +1,12 @@
-# $FreeBSD: stable/11/lib/csu/Makefile.inc 288074 2015-09-21 18:39:13Z bdrewery $
+# $FreeBSD$
 
 SSP_CFLAGS=
 
 SED_FIX_NOTE = -i "" -e '/\.note\.tag/s/progbits/note/'
 
 NO_WMISSING_VARIABLE_DECLARATIONS=
+
+CFLAGS+=	-fno-asynchronous-unwind-tables
+CFLAGS+=	-fno-omit-frame-pointer
 
 .include "../Makefile.inc"
