add siginfo to chflags
Obtained from: FreeBSD

--- a/bin/chflags/tests/Makefile
+++ b/bin/chflags/tests/Makefile
@@ -1,4 +1,4 @@
-# $FreeBSD: stable/11/bin/chflags/tests/Makefile 323275 2017-09-07 16:54:47Z asomers $
+# $FreeBSD$
 
 ATF_TESTS_SH+=  chflags_test
 
