--- a/contrib/mport/libmport/Makefile
+++ b/contrib/mport/libmport/Makefile
@@ -8,10 +8,11 @@ SRCS=	asset.c bundle_write.c bundle_read.c plist.c create_primative.c db.c \
 		default_cbs.c  merge_primative.c bundle_read_install_pkg.c \
 		update_primative.c bundle_read_update_pkg.c pkgmeta.c \
     	fetch.c index.c index_depends.c install.c clean.c setting.c  \
-   		stats.c update.c upgrade.c verify.c lock.c mkdir.c hashmap.c import_export.c
+   		stats.c update.c upgrade.c verify.c lock.c mkdir.c hashmap.c import_export.c \
+   		autoremove.c
 INCS=	mport.h
 
-CFLAGS+=	-I${.CURDIR}
+CFLAGS+=	-I${.CURDIR} -I/usr/include/private/ucl
 SHLIB_MAJOR=	2
 MAN=	mport.3
 
@@ -19,8 +20,8 @@ WARNS=	3
 
 MK_PROFILE=no
 
-LIBADD=	md archive bz2 lzma z fetch sqlite3 pthread
+LIBADD=	md archive bz2 lzma z fetch sqlite3 ucl pthread
 
-LDFLAGS+=	-lmd -larchive -lbz2 -llzma -lz -lfetch -lsqlite3 -lpthread
+LDFLAGS+=	-lmd -larchive -lbz2 -llzma -lz -lfetch -lsqlite3 -lpthread -lprivateucl
 
 .include <bsd.lib.mk>
