--- a/Makefile.inc1
+++ b/Makefile.inc1
@@ -2196,7 +2196,7 @@ _prebuild_libs=	${_kerberos5_lib_libasn1} \
 		${_secure_lib_libcrypto} ${_lib_libldns} \
 		${_secure_lib_libssh} ${_secure_lib_libssl} \
 		lib/libblocksruntime lib/libarchive lib/libfetch lib/libsqlite3 \
-		lib/libdispatch lib/libmagic
+		lib/libdispatch lib/libmagic lib/libucl
 .if ${MK_GNUCXX} != no
 _prebuild_libs+= gnu/lib/libstdc++ gnu/lib/libsupc++
 gnu/lib/libstdc++__L: lib/msun__L
@@ -2327,6 +2327,8 @@ kerberos5/lib/libheimipcc__L: kerberos5/lib/libroken__L kerberos5/lib/libheimbas
 lib/libsqlite3__L: lib/libthr__L lib/msun__L lib/libz__L
 
 lib/libdispatch__L: lib/libblocksruntime__L lib/libthr__L
+
+lib/libucl__L: lib/msun__L
 
 .if ${MK_GSSAPI} != "no"
 _lib_libgssapi=	lib/libgssapi
