--- a/lib/libucl/Makefile
+++ b/lib/libucl/Makefile
@@ -2,6 +2,7 @@ LIBUCL=	${SRCTOP}/contrib/libucl
 
 PACKAGE=lib${LIB}
 LIB=		ucl
+PRIVATELIB=	true
 SHLIB_MAJOR=	1
 SRCS=		ucl_emitter_streamline.c \
 		ucl_emitter_utils.c \
