fix dependency list.

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -152,7 +152,7 @@ SUBDIR_DEPEND_libgeom= libexpat libsbuf
 SUBDIR_DEPEND_librpcsec_gss= libgssapi
 SUBDIR_DEPEND_libmagic= libz
 SUBDIR_DEPEND_libmemstat= libkvm
-SUBDIR_DEPEND_libmport= libarchive libbz2 liblzma libfetch libsqlite3 libucl
+SUBDIR_DEPEND_libmport= libmd libarchive libbz2 liblzma libz libfetch libsqlite3 libucl
 SUBDIR_DEPEND_libmsearch= libsqlite3 libmagic libz
 SUBDIR_DEPEND_libopie= libmd
 SUBDIR_DEPEND_libpam= libcrypt libopie ${_libradius} librpcsvc libtacplus libutil ${_libypclnt} ${_libcom_err} 
