sync libfetch with freebsd 12-stable (Sep 2021)

--- a/lib/libfetch/Makefile
+++ b/lib/libfetch/Makefile
@@ -1,4 +1,4 @@
-# $FreeBSD: stable/11/lib/libfetch/Makefile 298107 2016-04-16 07:45:30Z gjb $
+# $FreeBSD$
 
 .include <src.opts.mk>
 
@@ -68,6 +68,7 @@ MLINKS+= fetch.3 fetchPutFTP.3
 MLINKS+= fetch.3 fetchPutFile.3
 MLINKS+= fetch.3 fetchPutHTTP.3
 MLINKS+= fetch.3 fetchPutURL.3
+MLINKS+= fetch.3 fetchReqHTTP.3
 MLINKS+= fetch.3 fetchStat.3
 MLINKS+= fetch.3 fetchStatFTP.3
 MLINKS+= fetch.3 fetchStatFile.3
