--- a/usr.sbin/unbound/Makefile
+++ b/usr.sbin/unbound/Makefile
@@ -1,4 +1,4 @@
-# $FreeBSD: stable/11/usr.sbin/unbound/Makefile 356345 2020-01-04 01:09:33Z cy $
+# $FreeBSD$
 
 SUBDIR=	daemon anchor checkconf control
 SUBDIR+= setup
