--- a/usr.sbin/unbound/setup/Makefile
+++ b/usr.sbin/unbound/setup/Makefile
@@ -1,4 +1,4 @@
-# $FreeBSD: stable/11/usr.sbin/unbound/setup/Makefile 255809 2013-09-23 04:36:51Z des $
+# $FreeBSD$
 
 SCRIPTS= local-unbound-setup.sh
 MAN= #
