--- a/usr.sbin/unbound/Makefile.inc
+++ b/usr.sbin/unbound/Makefile.inc
@@ -1,13 +1,14 @@
-# $FreeBSD: stable/11/usr.sbin/unbound/Makefile.inc 356345 2020-01-04 01:09:33Z cy $
+# $FreeBSD$
 
-NO_WERROR= true
+NO_WERROR=	true
+NO_WTHREAD_SAFETY= true
 PACKAGE=	unbound
 
 .for man in ${MAN}
 ${man}: ${UNBOUNDDIR}/doc/${man:S/local-//}
 	sed -E \
-	    -e 's/\<(fI)?unbound\>/\1local-unbound/g' \
-	    -e 's/\<(fI)?Unbound\>/Local-unbound/g' \
+	    -e 's/\<(fI)?u(nbound\>[^.])/\1local-u\2/g' \
+	    -e 's/\<(fI)?U(nbound\>[^.])/\1Local-u\2/g' \
 	    -e 's/\/local-unbound/\/unbound/g' \
 	    <${.ALLSRC} >${.TARGET}
 CLEANFILES += ${man}
