--- a/libexec/dma/dmagent/dma.conf
+++ b/libexec/dma/dmagent/dma.conf
@@ -1,4 +1,4 @@
-# $FreeBSD: stable/11/libexec/dma/dmagent/dma.conf 289087 2015-10-09 22:09:44Z bapt $
+# $FreeBSD$
 #
 # Your smarthost (also called relayhost).  Leave blank if you don't want
 # smarthost support.
