--- a/libexec/dma/dmagent/mailer.conf
+++ b/libexec/dma/dmagent/mailer.conf
@@ -1,4 +1,4 @@
-# $FreeBSD: stable/11/libexec/dma/dmagent/mailer.conf 327765 2018-01-10 09:06:07Z delphij $
+# $FreeBSD$
 
 sendmail  /usr/libexec/dma
 mailq     /usr/libexec/dma
