--- a/usr.sbin/uefisign/Makefile
+++ b/usr.sbin/uefisign/Makefile
@@ -1,4 +1,4 @@
-# $FreeBSD: stable/11/usr.sbin/uefisign/Makefile 279323 2015-02-26 15:48:20Z trasz $
+# $FreeBSD$
 
 PROG=	uefisign
 SRCS=	uefisign.c child.c pe.c
@@ -6,6 +6,6 @@ MAN=	uefisign.8
 
 LIBADD=	crypto
 
-WARNS=	6
+WARNS?=	6
 
 .include <bsd.prog.mk>
