--- a/lib/libauditd/Makefile
+++ b/lib/libauditd/Makefile
@@ -1,7 +1,3 @@
-#
-# $FreeBSD: stable/11/lib/libauditd/Makefile 313538 2017-02-10 07:32:40Z ngie $
-#
-
 PACKAGE=lib${LIB}
 OPENBSMDIR=		${SRCTOP}/contrib/openbsm
 _LIBAUDITDDIR=		${OPENBSMDIR}/libauditd
@@ -23,3 +19,10 @@ WARNS?=		3
 MAN=
 
 .include <bsd.lib.mk>
+
+# Disable -Wcast-align.  Casting res->ai_addr in auditd_set_host triggers this
+# warning, but it's ok because res->ai_addr must've originally pointed to a
+# sockaddr_in or sockaddr_in6 anyway.
+# Better would be to disable this warning in just that one function, but GCC
+# 4.2 can't do that :( .
+CWARNFLAGS.auditd_lib.c+=	-Wno-cast-align
