update ncurses to 6.2

--- a/lib/ncurses/Makefile
+++ b/lib/ncurses/Makefile
@@ -1,13 +1,9 @@
-# $FreeBSD: stable/11/lib/ncurses/Makefile 276320 2014-12-27 21:11:42Z ngie $
-
-SUBDIR=	ncurses form menu panel \
-	ncursesw formw menuw panelw
+SUBDIR=	ncurses form menu panel
 
 SUBDIR_PARALLEL=
 
-.for subdir in ${SUBDIR:Nncurses*:N*w}
+.for subdir in ${SUBDIR:Nncurses*}
 SUBDIR_DEPEND_${subdir}=	ncurses
-SUBDIR_DEPEND_${subdir}w=	ncursesw
 .endfor
 
 .include <bsd.subdir.mk>
