ncursesw is gone

--- a/Makefile.inc1
+++ b/Makefile.inc1
@@ -1891,7 +1891,6 @@ _tcsh=bin/csh
     bin/sh \
     ${LOCAL_TOOL_DIRS} \
     lib/ncurses/ncurses \
-    lib/ncurses/ncursesw \
     ${_rescue} \
     ${_share} \
     usr.bin/awk \
@@ -2183,7 +2182,7 @@ _prebuild_libs=	${_kerberos5_lib_libasn1} \
 		${_lib_libgssapi} \
 		lib/libkiconv lib/libkvm lib/liblzma lib/libmd lib/libnv \
 		${_lib_casper} \
-		lib/ncurses/ncurses lib/ncurses/ncursesw \
+		lib/ncurses/ncurses \
 		lib/libopie lib/libpam/libpam ${_lib_libthr} \
 		${_lib_libradius} lib/libsbuf lib/libtacplus \
 		lib/libgeom \
@@ -2205,7 +2204,7 @@ gnu/lib/libsupc++__L: gnu/lib/libstdc++__L
 
 .if ${MK_DIALOG} != "no"
 _prebuild_libs+= gnu/lib/libdialog
-gnu/lib/libdialog__L: lib/msun__L lib/ncurses/ncursesw__L
+gnu/lib/libdialog__L: lib/msun__L lib/ncurses/ncurses__L
 .endif
 
 .if ${MK_LIBCPLUSPLUS} != "no"
