--- a/secure/lib/libnetpgp/Makefile
+++ b/secure/lib/libnetpgp/Makefile
@@ -1,25 +1,25 @@
 .include <src.opts.mk>
 
 LIB=	netpgp
-SHLIB_MAJOR=	1
+SHLIB_MAJOR=	2
 
 NO_LINT=
 
-SRCS=	compress.c create.c crypto.c \
+SRCS=	bufgap.c compress.c create.c crypto.c \
 	keyring.c misc.c netpgp.c openssl_crypto.c packet-parse.c \
 	packet-print.c packet-show.c reader.c signature.c \
-	symmetric.c validate.c writer.c
+	ssh2pgp.c symmetric.c validate.c writer.c
 
 INCS=	netpgp.h
 INCSDIR=${INCLUDEDIR}
 
 NETPGP_SRC=	${SRCTOP}/crypto/netpgp
 
-CFLAGS+= -I${.CURDIR} -I${NETPGP_SRC}/include
+CFLAGS+= -I${.CURDIR} -I${NETPGP_SRC}/include -I${NETPGP_SRC}/src/libmj
 MAN= libnetpgp.3
 WARNS=4
 
-LIBADD+=	bz2 crypto z 
+LIBADD+=	bz2 crypto mj z 
 
 .include <bsd.lib.mk>
 
