--- a/secure/usr.bin/Makefile
+++ b/secure/usr.bin/Makefile
@@ -4,7 +4,7 @@
 
 SUBDIR=
 .if ${MK_OPENSSL} != "no"
-SUBDIR+=bdes openssl netpgp
+SUBDIR+=bdes openssl netpgp netpgpkeys
 .if ${MK_OPENSSH} != "no"
 SUBDIR+=scp sftp ssh ssh-add ssh-agent ssh-keygen ssh-keyscan
 .endif
