--- a/secure/lib/Makefile
+++ b/secure/lib/Makefile
@@ -1,10 +1,10 @@
-# $FreeBSD: stable/11/secure/lib/Makefile 265420 2014-05-06 04:22:01Z imp $
-
 .include <src.opts.mk>
 
 SUBDIR= 
 .if ${MK_OPENSSL} != "no"
-SUBDIR+=libcrypto libssl libmj libnetpgp
+SUBDIR+=libcrypto libssl libmj \
+	.WAIT \
+	libnetpgp
 .if ${MK_OPENSSH} != "no"
 SUBDIR+=libssh
 .endif
