add more items to ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,14 @@
+*.a
+*.core
+*.ko
+*.o
+*.orig
+*.rej
+*.so
+*.sw[nop]
+*~
 _.tinderbox.*
+_.universe-toolchain
 _.amd64.*
 _.arm.*
 _.arm64.*
@@ -14,10 +24,14 @@ GPATH
 GRTAGS
 GTAGS
 ID
+cscope.files
+cscope.in.out
 cscope.out
-?cscope.out
-*.ko
-*.o
+cscope.po.out
+compile_commands.json
+tags
+.clangd
+.ccls-cache
 sys/modules/**/*.h
 sys/modules/**/x86
 sys/modules/**/machine
