--- a/Makefile.inc1
+++ b/Makefile.inc1
@@ -2192,7 +2192,7 @@ _prebuild_libs=	${_kerberos5_lib_libasn1} \
 		${_cddl_lib_libzfs_core} ${_cddl_lib_libzfs} \
 		${_cddl_lib_libctf} \
 		lib/libutil lib/libpjdlog ${_lib_libypclnt} lib/libz lib/msun \
-		${_secure_lib_libcrypto} ${_secure_lib_libssl} \
+		${_secure_lib_libcrypto} ${_secure_lib_libssl} ${_secure_lib_libmj} \
 		${_lib_libldns} ${_secure_lib_libssh} \
 		lib/libblocksruntime lib/libarchive lib/libfetch lib/libsqlite3 \
 		lib/libdispatch lib/libmagic lib/libucl
@@ -2281,6 +2281,10 @@ _prebuild_libs+=	lib/libproc lib/librtld_db
 .if ${MK_OPENSSL} != "no"
 _secure_lib_libcrypto= secure/lib/libcrypto
 _secure_lib_libssl= secure/lib/libssl
+_secure_lib_libmj= secure/lib/libmj
+_secure_lib_libnetpgp= secure/lib/libnetpgp
+secure/lib/libmj__L: secure/lib/libssl__L secure/lib/libcrypto__L
+secure/lib/libnetpgp__L: secure/lib/libssl__L secure/lib/libcrypto__L secure/lib/libmj__L
 lib/libradius__L secure/lib/libssl__L: secure/lib/libcrypto__L
 .if ${MK_LDNS} != "no"
 _lib_libldns= lib/libldns
