--- a/usr.bin/svn/lib/libsvn_subr/Makefile
+++ b/usr.bin/svn/lib/libsvn_subr/Makefile
@@ -1,5 +1,3 @@
-# $FreeBSD$
-
 .include "${.CURDIR}/../Makefile.inc"
 
 .PATH:	${SVNDIR}/libsvn_subr ${SVNDIR}/libsvn_subr/lz4
@@ -8,6 +6,7 @@ INTERNALLIB=	yes
 LIB=		svn_subr
 
 SRCS=		adler32.c \
+		apr_escape.c \
 		atomic.c \
 		auth.c \
 		base64.c \
