--- a/lib/libbsnmp/Makefile.inc
+++ b/lib/libbsnmp/Makefile.inc
@@ -1,4 +1,4 @@
-# $FreeBSD: stable/11/lib/libbsnmp/Makefile.inc 299699 2016-05-13 21:17:49Z ngie $
+# $FreeBSD$
 
 INCSDIR=	${INCLUDEDIR}/bsnmp
 PACKAGE=	bsnmp
