--- a/share/snmp/mibs/Makefile
+++ b/share/snmp/mibs/Makefile
@@ -1,4 +1,6 @@
-# $FreeBSD: stable/11/share/snmp/mibs/Makefile 284255 2015-06-11 04:22:17Z sjg $
+# $FreeBSD$
+
+PACKAGE=	bsnmp
 
 FILES=	FREEBSD-MIB.txt
 FILESDIR=	${SHAREDIR}/snmp/mibs
