--- a/lib/libsqlite3/Makefile
+++ b/lib/libsqlite3/Makefile
@@ -11,7 +11,7 @@ CFLAGS+=	-I${SQLITEDIR} -DSQLITE_ENABLE_FTS3 -DSQLITE_OS_UNIX=1 \
 		-DSQLITE_THREADSAFE=1 -DSQLITE_ENABLE_RTREE=1 \
 		-DSQLITE_ENABLE_FTS5 -DSQLITE_ENABLE_FTS4 \
 		-DSQLITE_ENABLE_JSON1 -DSQLITE_ENABLE_GEOPOLY \
-		-DSQLITE_HAVE_ZLIB
+		-DSQLITE_HAVE_ZLIB -DSQLITE_ENABLE_MATH_FUNCTIONS
 
 WARNS?=		0
 
